# kagi-curator

./: CLAUDE.md  pyproject.toml
agent_plans/v0_dev/: INITIAL_OVERVIEW.md
agent_plans/v0_dev/phases/: PHASE_1_CORE_INTERFACES.md  PHASE_2_DATA_SOURCE_ADAPTERS.md  PHASE_5_REGIONAL_SECTIONS.md
config/: default.toml  default.yaml
notebooks/: general-news.py
notebooks/__marimo__/session/: general-news.py.json
src/kagi_curator/: __init__.py
src/kagi_curator/config/: loader.py  models.py  pipeline.py
src/kagi_curator/curation/: news_curator.py  news_factory.py  standard_curator.py  standard_factory.py
src/kagi_curator/delivery/: base_deliverer.py  smtp_deliverer.py
src/kagi_curator/formatting/: base_formatter.py  email_formatter.py  plain_text_formatter.py
src/kagi_curator/models/: result.py
src/kagi_curator/orchestration/: news_orchestrator.py  standard_orchestrator.py
src/kagi_curator/sources/: data_source_adapter.py  kagi_api_adapter.py  rss_adapter.py
