[project]
name = "kagi-curator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Matthew McCabe", email = "mpmbq2@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
kagi-curator = "kagi_curator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
