[project]
name = "kagi-curator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Matthew McCabe", email = "mpmbq2@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0.12",
    "kagiapi>=0.2.1",
    "marimo>=0.23.0",
]

[project.scripts]
kagi-curator = "kagi_curator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
